# ClanLib

./: configure.ac
Sources/VK/: Makefile.am  precomp.h  setup_vulkan.cpp  vulkan_context_description.cpp  vulkan_device.cpp  vulkan_device.h  vulkan_vma.cpp  vulkan_window_provider_base.cpp  vulkan_window_provider_base.h
Sources/VK/Shaders/: color_only_frag_debug_12.spv.h  color_only_frag_release_12.spv.h  color_only_vert_debug_12.spv.h  color_only_vert_release_12.spv.h  path_frag_debug_12.spv.h  path_frag_release_12.spv.h  path_vert_debug_12.spv.h  path_vert_release_12.spv.h  single_texture_frag_debug_12.spv.h  single_texture_frag_release_12.spv.h  single_texture_vert_debug_12.spv.h  single_texture_vert_release_12.spv.h  sprite_frag_debug_12.spv.h  sprite_frag_release_12.spv.h  sprite_vert_debug_12.spv.h  sprite_vert_release_12.spv.h
Sources/VK/State/: vulkan_blend_state.cpp  vulkan_blend_state.h  vulkan_depth_stencil_state.cpp  vulkan_depth_stencil_state.h  vulkan_rasterizer_state.cpp  vulkan_rasterizer_state.h
Sources/VK/VK1/: vulkan_buffer_object_provider.cpp  vulkan_element_array_buffer_provider.cpp  vulkan_element_array_buffer_provider.h  vulkan_frame_buffer_provider.cpp  vulkan_frame_buffer_provider.h  vulkan_graphic_context_provider.cpp  vulkan_graphic_context_provider.h  vulkan_occlusion_query_provider.cpp  vulkan_occlusion_query_provider.h  vulkan_pixel_buffer_provider.cpp  vulkan_pixel_buffer_provider.h  vulkan_primitives_array_provider.cpp  vulkan_program_object_provider.cpp  vulkan_program_object_provider.h  vulkan_render_buffer_provider.cpp  (+10 more)
(+271 files in other folders)
